<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clicklistener"
            type="codes.malukimuthusi.hackathon.data.FareChartListener" />

        <variable
            name="routee"
            type="codes.malukimuthusi.hackathon.data.Route" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/singleItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{()->clicklistener.onClick(routee)}">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@{routee.start}"
                    app:layout_constraintEnd_toStartOf="@+id/to"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/cbd" />

                <TextView
                    android:id="@+id/to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{routee.end}"
                    app:layout_constraintEnd_toStartOf="@+id/amout"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/from"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/kitengela" />

                <TextView
                    android:id="@+id/amout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:fare_value="@{routee.fare}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/to"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/_40" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>